# remove

./: .gitignore  README.md  action.yml  main.py  pyproject.toml  requirements.txt  task.yml
.github/workflows/: test.yml
tests/: test_main.py
