[tool.poetry]
name = "remove"
version = "0.1.0"
description = "Remove action"
authors = ["Bonajo <m.bonajo@fontys.nl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "main.py"} 
]

[tool.poetry.dependencies]
python = "^3.8"
prepare-toolbox = "0.3.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
