[project]
name = "remove"
version = "0.1.0"
description = "Remove action"
authors = [{ name = "Bonajo", email = "m.bonajo@fontys.nl" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prepare-toolbox>=0.4.0",
]

[dependency-groups]
test = [
    "pytest>=7.4.2",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.1",
]

[tool.hatch.build.targets.wheel]
include = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
